--- a/public/styles.css
+++ b/public/styles.css
@@ -13,5 +13,16 @@ ul{
 button{
     background-color: black;
     color:purple;
+    border: yellow .5px solid;
     
+}
+footer{
+  position: fixed;
+  left:0;
+  bottom:0;
+  width:100%;
+  background-color:black;
+  color: purple;
+  text-align: center;
+  border-top: 1px solid yellow;
 }
